LAB 2/LE2_prob4.txt

//Solution 4:
// Error Appear : Class Two doesn't compile and throw error 



class One
{
    int O;
    One(int x){}
}
class Two extends One{
    
}
public class Main
{
	public static void main(String[] args) {
	    One piece = new One(1074);
	    Two p = new Two();
		
	}
}


/*
Main.java:46: error: constructor One in class One cannot be applied to given types;
class Two extends One{
^
  required: int
  found: no arguments
  reason: actual and formal argument lists differ in length
1 error
*/


// Proper Solution 
/*

class One
{
    int O;
    One(int x){ O = x;}
    public void show(){
        System.out.println(O);
    }
}
class Two extends One{
    Two(int x){
        super(x);
    }
}
public class Main
{
	public static void main(String[] args) {
	    One piece = new One(1074);
	    Two p = new Two(1074);
	    p.show();
		
	}
}
